--- a/philo/Makefile
+++ b/philo/Makefile
@@ -14,6 +14,7 @@ SRCS_F				= main.c\
 						ft_think.c\
 						ft_sleep.c\
 						ft_monitor.c\
+						ft_continue.c\
 						ft_stop.c
 OBJS_F				= $(SRCS_F:.c=.o)
 SRCS				= $(addprefix $(SRCS_D), $(SRCS_F))
